Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjBooleanField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        boolean var = true
        return var
    end
end